@@ -1,5 +1,9 @@
 Release Notes
 
+* 3/17/2015
+  * fixed getSiteStorageEndpointMap for NL
+  * fixed JG to use currentPriority instead of currentPriority
+
 * 3/12/2015
   * changed not to update contents when task is pending
 
